Fixed MDX and RDX right-aligned header img gradients.

--- a/assets/css/mdx.css
+++ b/assets/css/mdx.css
@@ -52,15 +52,26 @@
 @media screen and (min-width: 64em) {
 
   #header-img-lg {
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0.5)), color-stop(rgba(0, 0, 0, 0.1)), to(rgba(0, 0, 0, 0))), url(../img/2019-acura-mdx/header-img/1440x440-compressed.jpg);
-    background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0)), url(../img/2019-acura-mdx/header-img/1440x440-compressed.jpg);
-    background-image: -o-linear-gradient(left, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0)), url(../img/2019-acura-mdx/header-img/1440x440-compressed.jpg);
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0)), url(../img/2019-acura-mdx/header-img/1440x440-compressed.jpg); /* 1440 x 440 */
+    background-image: -webkit-gradient(linear, right top, left top, from(rgba(0, 0, 0, 0.5)), color-stop(rgba(0, 0, 0, 0.1)), to(rgba(0, 0, 0, 0))), url(../img/2019-acura-mdx/header-img/1440x440-compressed.jpg);
+    background-image: -webkit-linear-gradient(right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0)), url(../img/2019-acura-mdx/header-img/1440x440-compressed.jpg);
+    background-image: -o-linear-gradient(right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0)), url(../img/2019-acura-mdx/header-img/1440x440-compressed.jpg);
+    background-image: linear-gradient(to left, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0)), url(../img/2019-acura-mdx/header-img/1440x440-compressed.jpg); /* 1440 x 440 */
     background-size: cover;
     height: 0;
     padding-bottom: 30.5%;
     width: 100%;
   }
+
+  /*#header-img-lg {
+    background-image: -webkit-gradient(linear, right top, left top, from(rgba(0, 0, 0, 0.7)), color-stop(rgba(0, 0, 0, 0)), to(rgba(0, 0, 0, 0))), url(https://s3.amazonaws.com/fzautomotive/dealers/5be239696c313.jpg);
+    background-image: -webkit-linear-gradient(right, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url(https://s3.amazonaws.com/fzautomotive/dealers/5be239696c313.jpg);
+    background-image: -o-linear-gradient(right, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url(https://s3.amazonaws.com/fzautomotive/dealers/5be239696c313.jpg);
+    background-image: linear-gradient(to left, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url(https://s3.amazonaws.com/fzautomotive/dealers/5be239696c313.jpg);
+    background-size: cover;
+    height: 0;
+    padding-bottom: 30.5%;
+    width: 100%;
+  }*/
 
   #h1-container {
     margin-right: 2rem;
